# intelli-shell

./: .clippy.toml  .gitignore  .intellishell  .rustfmt.toml  .taplo.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  default_config.toml  install.ps1  install.sh  intelli-shell.fish  intelli-shell.ps1  intelli-shell.sh  release.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: book.yml  ci.yml  release.yml
.idx/: dev.nix
docs/: book.toml
docs/src/: README.md  SUMMARY.md  troubleshooting.md
docs/src/configuration/: ai.md  general.md  index.md  keybindings.md  search_tuning.md  theming.md
docs/src/guide/: basic_usage.md  installation.md  introduction_to_ai.md  key_concepts.md  populating_your_library.md  syncing.md  syncing_and_sharing.md  teams.md  variables.md  variables_and_completions.md  workspace.md  workspace_commands.md  workspace_library.md  your_first_session.md
docs/src/reference/: changelog.md  completion.md  completion_delete.md  completion_list.md  completion_new.md  config.md  export.md  fix.md  import.md  index.md  logs.md  new.md  replace.md  search.md  tldr.md  tldr_clear.md  tldr_fetch.md  update.md
src/: app.rs  cfg.rs  cli.rs  common.rs  config.rs  debug.rs  errors.rs  lib.rs  logging.rs  main.rs  storage.rs  theme.rs  tldr.rs  tui.rs
src/_examples/: cli.txt  completion_delete.txt  completion_list.txt  completion_new.txt  export.txt  fix.txt  import.txt  init.txt  new.txt  replace.txt  search.txt  tldr_clear.txt  tldr_fetch.txt
src/_shell/: intelli-shell.bash  intelli-shell.fish  intelli-shell.nu  intelli-shell.ps1  intelli-shell.zsh
src/ai/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/common/: misc.rs  mod.rs  process.rs
src/common/widget/: command.rs  label.rs  list.rs  mod.rs  text.rs
src/component/: completion_edit.rs  completion_list.rs  edit.rs  mod.rs  pick.rs  search.rs  variable.rs
src/model/: command.rs  completion.rs  import_export.rs  label.rs  mod.rs  release.rs  template.rs  tldr.rs  variable.rs
src/process/: changelog.rs  completion_delete.rs  completion_list.rs  completion_new.rs  edit.rs  export.rs  fetch.rs  fix.rs  import.rs  label.rs  mod.rs  new.rs  query.rs  replace.rs  save.rs  search.rs  tldr_clear.rs  tldr_fetch.rs  update.rs
src/service/: ai.rs  command.rs  completion.rs  export.rs  import.rs  import_export.rs  mod.rs  release.rs  tldr.rs  variable.rs  version.rs
src/storage/: client.rs  command.rs  completion.rs  import_export.rs  migrations.rs  mod.rs  queries.rs  release.rs  variable.rs  version.rs
src/utils/: completion.rs  destructive.rs  fuzzy.rs  history.rs  import_export.rs  installation.rs  markdown.rs  mod.rs  process.rs  string.rs  tags.rs  variable.rs  widget.rs
src/widgets/: command.rs  completion.rs  dynamic.rs  error.rs  fetch.rs  import_export.rs  label.rs  list.rs  loading.rs  mod.rs  new_version.rs  save.rs  search.rs  tag.rs  template.rs  textarea.rs  variable.rs
src/widgets/items/: command.rs  completion.rs  import_export.rs  mod.rs  string.rs  variable.rs
vhs/: demo.commands  env.tape  generate_all_tapes.sh  shared.tape  showcase.tape
vhs/data/: demo.commands  namespace.completions  service.completions
vhs/tapes/: fast.tape  theme_1_default.tape  theme_2_arcade.tape  theme_2_gruvbox.tape  theme_3_gruvbox.tape  theme_3_nord.tape  theme_4_nord.tape  theme_4_solarized.tape  theme_5_dracula.tape
vhs/themes/: arcade.toml  dracula.toml  gruvbox.toml  nord.toml  solarized.toml
