[package]
name = "intelli-shell"
description = "Like IntelliSense, but for shells"
version = "0.2.4"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["intellisense", "autocomplete", "cli", "shell", "bookmark"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/lasantosr/intelli-shell/"

[[bin]]
name = "intelli-shell"
path = "src/main.rs"
required-features = []

[features]
default = ["tldr"]
tldr = ["dep:git2", "dep:tempfile"]
debug = []

[dependencies]
anyhow               = "1"
clap                 = { version = "4", features = ["derive"] }
crossterm            = "0.26"
directories          = "5"
indoc                = "2"
iter-flow            = "0.1"
itertools            = "0.10"
once_cell            = "1"
parking_lot          = "0.12"
rayon                = "1"
regex                = { version = "1" }
rusqlite             = { version = "0.29", features = ["bundled", "uuid"] }
rusqlite_migration   = "1"
serde                = { version = "1", features = ["derive", "rc"] }
serde_json           = "1"
tempfile             = { version = "3", optional = true }
tui                  = "0.19"
unicode-segmentation = "1"
unidecode            = "0.3"
uuid                 = { version = "1", features = ["serde", "v4"] }

[dependencies.git2]
default-features = false
features         = ["https", "vendored-openssl", "vendored-libgit2"]
optional         = true
version          = "0.17"
