[package]
name = "intelli-shell"
description = "Like IntelliSense, but for shells"
version = "3.2.3"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
keywords = ["intellisense", "autocomplete", "cli", "shell", "bookmark"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/lasantosr/intelli-shell"
documentation = "https://lasantosr.github.io/intelli-shell"

[[bin]]
name = "intelli-shell"
path = "src/main.rs"
required-features = []

[features]
# Default features
default = ["extra-features", "self-update", "vendored"]

# Additional features that require extra dependencies
extra-features = ["tldr"]
tldr = ["dep:git2"]

# Self-update doesn't work with package managers, they can disable it
self-update = ["dep:self_update"]

# Group the different vendored options into a single feature for convenience
vendored = ["vendored-sqlite3", "vendored-openssl", "vendored-libgit2"]
vendored-sqlite3 = ["rusqlite/bundled"]
vendored-openssl = ["git2?/vendored-openssl"]
vendored-libgit2 = ["git2?/vendored-libgit2"]

[dependencies]
async-stream       = "0.3"
async-trait        = "0.1"
chrono             = "0.4"
clap               = { version = "4", features = ["derive"] }
clap-stdin         = { version = "0.7", features = ["tokio"] }
color-eyre         = "0.6"
crossbeam-channel  = "0.5"
crossterm          = { version = "0.28.1", features = ["serde", "event-stream", "use-dev-tty", "libc"] }
directories        = "6"
enum_cycling       = { version = "0.2", features = ["derive"] }
futures-util       = "0.3"
heck               = "0.5"
ignore             = "0.4"
indicatif          = "0.18"
itertools          = "0.14"
os_info            = "3"
parking_lot        = "0.12"
percent-encoding   = "2"
prettytable-rs     = "0.10"
ratatui            = "0.29"
rayon              = "1"
regex              = { version = "1" }
reqwest            = { version = "0.12", features = ["stream", "json"] }
rusqlite           = { version = "0.37", features = ["functions", "chrono", "uuid", "serde_json"] }
rusqlite_migration = "2.3"
schemars           = "1"
sea-query          = { version = "1.0.0-rc.14", features = ["derive", "thread-safe", "backend-sqlite"] }
sea-query-rusqlite = { version = "0.8.0-rc.8", features = ["with-chrono", "with-uuid", "with-json"] }
semver             = "1"
serde              = { version = "1", features = ["derive", "rc"] }
serde_json         = "1"
signal-hook        = "0.3"
strip-ansi-escapes = "0.2"
strum              = { version = "0.27", features = ["derive"] }
sysinfo            = "0.37"
tokio              = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time", "process", "signal"] }
tokio-stream       = "0.1"
tokio-util         = "0.7"
toml               = "0.9"
tracing            = "0.1"
tracing-error      = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
trait-variant      = "0.1"
tui-textarea       = "0.7"
tui-widget-list    = "0.13"
unicode-width      = "0.2"
unidecode          = "0.3"
uuid               = { version = "1", features = ["serde", "v7"] }
wait-timeout       = "0.2"
walkdir            = "2"

[dependencies.git2]
default-features = false
features         = ["https"]
optional         = true
version          = "0.20"

[dependencies.self_update]
default-features = false
features         = ["rustls", "archive-zip", "compression-zip-deflate", "archive-tar", "compression-flate2"]
optional         = true
version          = "0.42"

[dev-dependencies]
pretty_assertions = "1"
